[tool.poetry]
name = "dukiAleksey_brain_games"
version = "0.2.0"
description = ""
authors = ["Aleksey Duki <aleksey.duki@transatel.com>"]
packages = [{include = "brain_games"},]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
